# coworld-tribal-village

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  MANIFEST.in  README.md  compose.yaml  coworld_manifest_template.json  pyproject.toml  tribal_village.nim  tribal_village.nimble
.github/workflows/: build-role-images.yml  upload-coworld.yml
commissioner/commissioners/ruleset_strategy_commissioner/: build.sh
docs/: play_tribal_village.md  rules.md
players/villager/: Dockerfile  README.md  coplayer_manifest.json  villager.nim
scripts/: shell_minimal.html
src/: ai.nim  environment.nim  renderer.nim  tribal_village_interface.nim
tests/: eval_builtin_ai.nim  smoke_coworld_runtime.py  test_role_observations.py
tribal_village_env/: __init__.py  build.py  cli.py  environment.py
tribal_village_env/coworld/: __init__.py  direct_env.py  player.py  server.py
tribal_village_env/coworld/clients/: global.html  player.html  replay.html  view_common.js
tribal_village_env/coworld/docs/: global_protocol_spec.md  player_protocol_spec.md
