[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tribal-village"
version = "0.1.2"
description = "Tribal Village - Multi-agent RL environment built with Nim"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Metta AI", email = "info@metta.ai" }]
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=2.4.6",
  "typer>=0.26.5",
  "rich>=15.0.0",
]

[project.scripts]
tribal-village = "tribal_village_env.cli:app"

[tool.setuptools]
include-package-data = true

[project.urls]
Homepage = "https://github.com/Metta-AI/coworld-tribal-village"
Repository = "https://github.com/Metta-AI/coworld-tribal-village.git"

[project.optional-dependencies]
pufferlib = [
  "gymnasium>=1.3.0",
  "pufferlib-core>=3.0.23",
]
coworld = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "websockets>=15.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tribal_village_env*"]

[tool.setuptools.package-data]
tribal_village_env = [
  "*.so",
  "*.dylib",
  "*.dll",
  "libtribal_village.*",
  "coworld/clients/*.html",
  "coworld/clients/*.js",
  "coworld/docs/*.md",
]

[tool.uv]
cache-keys = [
  { file = "tribal_village.nim" },
  { file = "tribal_village.nimble" },
  { file = "nimby.lock" },
  { file = "src/**/*.nim" },
  { file = "tribal_village_env/**/*.py" },
  { file = "tribal_village_env/libtribal_village.*" },
]
